<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/tv_titulo_marginbottom"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/controles_margin"
        android:onClick="onClickXML"
        android:text="@string/btnxml_text"/>

    <Button
        android:id="@+id/btnEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/controles_margin"
        android:text="@string/btnevento_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInterfaz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/controles_margin"
            android:text="@string/btnint1_text"/>

        <Button
            android:id="@+id/btnInterfaz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/controles_margin"
            android:text="@string/btnint2_text"/>

    </LinearLayout>

</LinearLayout>